# Ks-GPO-Macros

./: .gitignore  Auto Fish Settings.json  README.md  Test-repositionnement.py  package-lock.json  package.json  requirements.txt
.cargo/: config.toml
src/: boot.css  bootstrapper.css  bootstrapper.html  bootstrapper.js  fish.html  fish.js  hub.css  hub.html  hub.js  index.html  main.html  main.js  script.js  stats.html  styles.css
src-tauri/: Auto Fish Settings.json  Auto Fish Settings.json.backup_1770065741  Cargo.toml  Juzo Settings.json  backend.py  build.rs  debug.txt  port_11616.json  port_12232.json  port_14712.json  port_15452.json  port_15760.json  port_16544.json  port_1668.json  port_18176.json  port_21100.json  port_36480.json  port_36580.json  port_8456.json  port_unknown.json  tauri.conf.json  visual-guide.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/.github/workflows/: release.yml
~/.tauri/: myapp.key  myapp.key.pub
